--- a/atomic-core/scss/organisms/_introBlock.scss
+++ b/atomic-core/scss/organisms/_introBlock.scss
@@ -25,17 +25,33 @@
 
 
 
-
 .searchWindow{
 	position: fixed;
 	background: rgba(0, 121, 191, 0.77);
 	color: #fff;
-
 	font-family: $font1;
 	opacity: 0;
 	transition: opacity .25s;
+	z-index: -1;
 	a{
 		color: #fff;
+	}
+	::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+		color: #fff;
+		font-size: 30px;
+		font-style: italic;
+	}
+	::-moz-placeholder { /* Firefox 19+ */
+		color: #fff;
+		font-size: 30px;
+	}
+	:-ms-input-placeholder { /* IE 10+ */
+		color: #fff;
+		font-size: 30px;
+	}
+	:-moz-placeholder { /* Firefox 18- */
+		color: #fff;
+		font-size: 30px;
 	}
 }
 
@@ -44,10 +60,13 @@
 		top: 0;
 		bottom: 0;
 		left: 0;
-		width: 100%;
+	    width: 100%;
 	    height: 100%;
 		opacity: 1;
 }
+
+
+
 
 .searchWindow__close{
 	cursor: pointer;
@@ -136,20 +155,3 @@
 
 
 
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-	color: #fff;
-	font-size: 30px;
-	font-style: italic;
-}
-::-moz-placeholder { /* Firefox 19+ */
-	color: #fff;
-	font-size: 30px;
-}
-:-ms-input-placeholder { /* IE 10+ */
-	color: #fff;
-	font-size: 30px;
-}
-:-moz-placeholder { /* Firefox 18- */
-	color: #fff;
-	font-size: 30px;
-}
